Fixes some page alignment

--- a/src/client/App.css
+++ b/src/client/App.css
@@ -374,7 +374,7 @@ li a:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-height: 82vh;
+  min-height: 83vh;
   background-color: #364a60;
 }
 
@@ -448,12 +448,12 @@ li a:hover {
 }
 
 .billdetail {
-  min-height: 68vh;
+  min-height: 70vh;
   background-color: #364a60;
 }
 
 .billdetail_admin {
-  min-height: 82vh;
+  min-height: 83vh;
 }
 
 .billdetail_blur {
@@ -582,6 +582,9 @@ table {
   align-items: center;
   min-height: 11vh;
   background-color: #1e2b3a;
+  /* position: relative;
+  bottom: 0px;
+  left: 0px; */
 }
 
 .footerIcons {
